# ChangeLog for media-sound/soundkonverter
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/soundkonverter/ChangeLog,v 1.25 2012/02/18 18:38:55 johu Exp $

*soundkonverter-1.3.2 (18 Feb 2012)

  18 Feb 2012; Johannes Huber <johu@gentoo.org> +soundkonverter-1.3.2.ebuild:
  Version bump wrt bug #404317 by Thomas Reinhold <tr500@web.de> with linguas
  additions by me.

  23 Dec 2011; Samuli Suominen <ssuominen@gentoo.org>
  -soundkonverter-1.0.0.ebuild, -files/soundkonverter-1.0.0-underlinking.patch,
  -soundkonverter-1.2.0.ebuild:
  old

*soundkonverter-1.2.1 (23 Dec 2011)

  23 Dec 2011; Samuli Suominen <ssuominen@gentoo.org>
  +soundkonverter-1.2.1.ebuild:
  Version bump wrt #395731 by Ivan S. Titov

*soundkonverter-1.2.0 (16 Nov 2011)

  16 Nov 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  +soundkonverter-1.2.0.ebuild:
  Version bump

  28 Oct 2011; Jonathan Callen <abcd@gentoo.org>
  -soundkonverter-1.0.0_rc2.ebuild:
  remove old

  11 Aug 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  soundkonverter-1.0.0.ebuild, +files/soundkonverter-1.0.0-underlinking.patch:
  Fix underlinking, bug 367685

*soundkonverter-1.0.0 (07 Aug 2011)

  07 Aug 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  -soundkonverter-1.0.0_beta1.ebuild, +soundkonverter-1.0.0.ebuild:
  Version bump; remove old

*soundkonverter-1.0.0_rc2 (25 Feb 2011)

  25 Feb 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  +soundkonverter-1.0.0_rc2.ebuild:
  Version bump (bug 341439)

  02 Feb 2011; Theo Chatzimichos <tampakrap@gentoo.org>
  soundkonverter-1.0.0_beta1.ebuild:
  EAPI3, use add_kdebase_dep

  09 Aug 2010; Maciej Mrozowski <reavertm@gentoo.org>
  soundkonverter-1.0.0_beta1.ebuild:
  Remove unnecessary KDE_MINIMAL

*soundkonverter-1.0.0_beta1 (25 May 2010)

  25 May 2010; Dror Levin <spatz@gentoo.org>
  -soundkonverter-1.0.0_alpha2.ebuild, +soundkonverter-1.0.0_beta1.ebuild: