@@ -1,13 +1,14 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/soundkonverter/Attic/soundkonverter-1.2.1.ebuild,v 1.1 2011/12/23 00:22:07 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/soundkonverter/Attic/soundkonverter-1.3.3.ebuild,v 1.1 2012/03/01 12:32:06 johu Exp $
 
 EAPI=4
+KDE_LINGUAS="cs de es_AR et fr hu pt"
 inherit kde4-base
 
 DESCRIPTION="Frontend to various audio converters"
 HOMEPAGE="http://www.kde-apps.org/content/show.php/soundKonverter?content=29024"
-SRC_URI="http://gitorious.org/${PN}/${PN}/blobs/raw/6a527f4ea559795b31a93477217c107f40326053/release/${P}.tar.gz"
+SRC_URI="http://kde-apps.org/CONTENT/content-files/29024-${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="4"
