@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/soundkonverter
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/soundkonverter/ChangeLog,v 1.25 2012/02/18 18:38:55 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/soundkonverter/ChangeLog,v 1.26 2012/03/01 12:32:06 johu Exp $
+
+*soundkonverter-1.3.3 (01 Mar 2012)
+
+  01 Mar 2012; Johannes Huber <johu@gentoo.org> +soundkonverter-1.3.3.ebuild,
+  -soundkonverter-1.2.1.ebuild:
+  Version bump, remove old.
 
 *soundkonverter-1.3.2 (18 Feb 2012)
 
